@@ -1,14 +1,9 @@
 package me.lironkaner.aspHarmonyPlugin;
 
-import org.bukkit.Bukkit;
-import org.bukkit.Chunk;
-import org.bukkit.Location;
-import org.bukkit.Material;
-import org.bukkit.NamespacedKey;
-import org.bukkit.World;
+import org.bukkit.*;
 import org.bukkit.block.Block;
 import org.bukkit.block.Chest;
-import org.bukkit.block.ShulkerBox;
+import org.bukkit.block.Container;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.BookMeta;
@@ -28,28 +23,17 @@ public class BookService {
         this.bookIdKey = new NamespacedKey(plugin, "book_id");
     }
 
-    // Get the spawn chunk of the default world
-    private Chunk getSpawnChunk() {
-        World world = Bukkit.getServer().getWorlds().get(0);  // Get the default world
-        Location spawnLocation = world.getSpawnLocation();     // Get the world spawn location
-        return world.getChunkAt(spawnLocation);                // Get the chunk at the spawn location
-    }
-
-    // Get all books stored in containers in the spawn chunk
     public CompletableFuture<List<Book>> getAllBooks() {
         return CompletableFuture.supplyAsync(() -> {
             List<Book> books = new ArrayList<>();
+
             try {
                 return Bukkit.getScheduler().callSyncMethod(plugin, () -> {
-                    Chunk storageChunk = getSpawnChunk();  // Get the spawn chunk
+                    Chunk storageChunk = getSpawnChunk();
 
-                    // Search in the spawn chunk's container blocks (chests, shulker boxes, etc.)
-                    for (Block block : getAllBlocksInChunk(storageChunk)) {
-                        if (block.getState() instanceof Chest chest) {
-                            searchInventory(chest.getInventory(), books);
-                        } else if (block.getState() instanceof ShulkerBox shulkerBox) {
-                            searchInventory(shulkerBox.getInventory(), books);
-                        }
+                    for (Container container: getChunkContainers(storageChunk)) {
+                        List<Book> inventoryBooks = getInventoryBooks(container.getInventory());
+                        books.addAll(inventoryBooks);
                     }
 
                     return books;
@@ -60,28 +44,21 @@ public class BookService {
         });
     }
 
-    // Get a specific book by ID from the spawn chunk
     public CompletableFuture<Book> getBook(int id) {
         return CompletableFuture.supplyAsync(() -> {
+
             try {
                 return Bukkit.getScheduler().callSyncMethod(plugin, () -> {
-                    Chunk storageChunk = getSpawnChunk();  // Get the spawn chunk
+                    Chunk storageChunk = getSpawnChunk();
 
-                    // Search in the spawn chunk's container blocks
-                    for (Block block : getAllBlocksInChunk(storageChunk)) {
-                        if (block.getState() instanceof Chest chest) {
-                            ItemStack bookItem = findBookInInventory(chest.getInventory(), id);
-                            if (bookItem != null) {
-                                BookMeta bookMeta = (BookMeta) bookItem.getItemMeta();
-                                return parseItemToBook(bookMeta);
-                            }
-                        } else if (block.getState() instanceof ShulkerBox shulkerBox) {
-                            ItemStack bookItem = findBookInInventory(shulkerBox.getInventory(), id);
-                            if (bookItem != null) {
-                                BookMeta bookMeta = (BookMeta) bookItem.getItemMeta();
-                                return parseItemToBook(bookMeta);
-                            }
-                        }
+                    for (Container container : getChunkContainers(storageChunk)) {
+                        ItemStack bookItem = searchInventory(container.getInventory(), id);
+                        if (bookItem == null) continue;
+
+                        BookMeta bookMeta = (BookMeta) bookItem.getItemMeta();
+                        assert bookMeta != null;
+
+                        return parseItemToBook(bookMeta);
                     }
 
                     return null;
@@ -92,40 +69,39 @@ public class BookService {
         });
     }
 
-    // Create a new book and drop it in the world at the spawn location
     public void createBook(Book book) {
         Bukkit.getScheduler().runTask(plugin, () -> {
             ItemStack bookItem = new ItemStack(Material.WRITABLE_BOOK);
             BookMeta bookMeta = (BookMeta) bookItem.getItemMeta();
+
             if (bookMeta == null) return;
 
-            // Set the book's details
             bookMeta.setTitle(book.getTitle());
             bookMeta.setAuthor("Minecraft Library");
             bookMeta.getPersistentDataContainer().set(bookIdKey, PersistentDataType.INTEGER, book.getId());
 
-            // Add description and image URL as the first page
-            bookMeta.addPage("Description: " + book.getDescription() + "\n\n---\n\n" + "Image URL: " + book.getImageUrl());
+            bookMeta.addPage(
+                    "Description: " + book.getDescription() +
+                            "\n\n---\n\n" +
+                            "Image URL: " + book.getImageUrl()
+            );
 
-            // Add chapters as pages
             for (Chapter chapter : book.getChapters()) {
                 bookMeta.addPage(chapter.getContent());
             }
 
             bookItem.setItemMeta(bookMeta);
 
-            // Drop the book at the spawn location
-            World world = Bukkit.getServer().getWorlds().get(0);  // Get the default world
-            Location spawnLocation = world.getSpawnLocation();
+            World world = Bukkit.getServer().getWorlds().getFirst();
+            Location spawnLocation = new Location(world, 17, 75, 16);
             world.dropItemNaturally(spawnLocation, bookItem);
         });
     }
 
-    // Update book by ID, modifies the book's content
     public void updateBook(Book book) {
         CompletableFuture.runAsync(() -> {
             try {
-                Book existingBook = getBook(book.getId()).get();  // Get the book by ID
+                Book existingBook = getBook(book.getId()).get();
                 if (existingBook == null) throw new RuntimeException("Book not found");
 
                 deleteBook(book.getId());
@@ -136,91 +112,131 @@ public class BookService {
         });
     }
 
-    // Delete a book by ID from the spawn chunk
     public void deleteBook(int id) {
         CompletableFuture.runAsync(() -> {
             try {
-                Book book = getBook(id).get();
-                if (book == null) throw new RuntimeException("Book not found");
+                Book existingBook = getBook(id).get();
+                if (existingBook == null) throw new RuntimeException("Book not found");
 
-                Chunk storageChunk = getSpawnChunk();  // Get the spawn chunk
+                Bukkit.getScheduler().callSyncMethod(plugin, () -> {
+                    Chunk storageChunk = getSpawnChunk();
 
-                // Search in the spawn chunk's container blocks
-                for (Block block : getAllBlocksInChunk(storageChunk)) {
-                    if (block.getState() instanceof Chest chest) {
-                        ItemStack bookItem = findBookInInventory(chest.getInventory(), id);
-                        if (bookItem != null) {
-                            chest.getInventory().remove(bookItem);  // Remove the book from chest
-                            return;
+                    for (Container container : getChunkContainers(storageChunk)) {
+                        Inventory inventory = container.getInventory();
+
+                        ItemStack bookItem = searchInventory(inventory, id);
+                        if (bookItem == null) continue;
+
+                        System.out.println("Book found and will be removed: " + bookItem);
+
+                        List<ItemStack> remainingItems = new ArrayList<>();
+                        for (ItemStack itemStack : inventory.getContents()) {
+                            if (itemStack != null && !itemStack.equals(bookItem)) {
+                                remainingItems.add(itemStack);
+                            }
                         }
-                    } else if (block.getState() instanceof ShulkerBox shulkerBox) {
-                        ItemStack bookItem = findBookInInventory(shulkerBox.getInventory(), id);
-                        if (bookItem != null) {
-                            shulkerBox.getInventory().remove(bookItem);  // Remove the book from shulker box
-                            return;
+
+                        Block block = container.getBlock();
+                        Location chestLocation = block.getLocation();
+
+                        block.setType(Material.AIR);
+                        System.out.println("Old chest removed.");
+
+                        block.setType(Material.CHEST);
+                        System.out.println("New chest created.");
+
+                        Chest newChest = (Chest) block.getState();
+                        Inventory newInventory = newChest.getInventory();
+
+                        for (ItemStack remainingItem : remainingItems) {
+                            newInventory.addItem(remainingItem);
                         }
+
+                        newChest.update();
+                        System.out.println("Chest updated with remaining items, book removed.");
+
+                        return null;
                     }
-                }
+                    return null;
+                }).get();
             } catch (ExecutionException | InterruptedException e) {
                 throw new RuntimeException("Error deleting book", e);
             }
         });
     }
 
-    // Helper method to search through an inventory and collect books
-    private void searchInventory(Inventory inventory, List<Book> books) {
+
+    private List<Book> getInventoryBooks(Inventory inventory) {
+        List<Book> books = new ArrayList<>();
+
         for (ItemStack itemStack : inventory.getContents()) {
-            if (isBookItem(itemStack)) {
-                BookMeta bookMeta = (BookMeta) itemStack.getItemMeta();
-                if (bookMeta != null) {
-                    books.add(parseItemToBook(bookMeta));
-                }
+            if (!isBookItem(itemStack))
+                continue;
+
+            BookMeta bookMeta = (BookMeta) itemStack.getItemMeta();
+
+            if (bookMeta != null) {
+                books.add(parseItemToBook(bookMeta));
             }
         }
+
+        return books;
     }
 
-    // Helper method to find a specific book by ID in an inventory
-    private ItemStack findBookInInventory(Inventory inventory, int bookId) {
+    private ItemStack searchInventory(Inventory inventory, int bookId) {
         for (ItemStack itemStack : inventory.getContents()) {
-            if (isBookItem(itemStack)) {
-                BookMeta bookMeta = (BookMeta) itemStack.getItemMeta();
-                if (bookMeta != null && bookMeta.getPersistentDataContainer().has(bookIdKey, PersistentDataType.INTEGER)) {
-                    int storedId = bookMeta.getPersistentDataContainer().get(bookIdKey, PersistentDataType.INTEGER);
-                    if (storedId == bookId) {
-                        return itemStack;
-                    }
-                }
-            }
+            if (!isBookItem(itemStack))
+                continue;
+
+            BookMeta bookMeta = (BookMeta) itemStack.getItemMeta();
+
+            if (bookMeta == null || !bookMeta.getPersistentDataContainer().has(bookIdKey, PersistentDataType.INTEGER))
+                continue;
+
+            int storedId = bookMeta.getPersistentDataContainer().get(bookIdKey, PersistentDataType.INTEGER);
+
+            if (storedId != bookId)
+                continue;
+
+            return itemStack;
         }
         return null;
     }
 
-    // Helper method to get all blocks in a given chunk
-    private List<Block> getAllBlocksInChunk(Chunk chunk) {
-        List<Block> blocks = new ArrayList<>();
+
+    private List<Container> getChunkContainers(Chunk chunk) {
+        List<Container> blocks = new ArrayList<>();
+
         for (int x = 0; x < 16; x++) {
             for (int y = chunk.getWorld().getMinHeight(); y < chunk.getWorld().getMaxHeight(); y++) {
                 for (int z = 0; z < 16; z++) {
                     Block block = chunk.getBlock(x, y, z);
-                    blocks.add(block);
+
+                    if (block.getState() instanceof Container container)
+                        blocks.add(container);
                 }
             }
         }
+
         return blocks;
     }
 
-    // Helper method to check if an item is a valid book
+    private Chunk getSpawnChunk() {
+        World world = Bukkit.getServer().getWorlds().getFirst();
+        Location spawnLocation = world.getSpawnLocation();
+        return world.getChunkAt(spawnLocation);
+    }
+
+
     private boolean isBookItem(ItemStack itemStack) {
         return itemStack != null && (itemStack.getType() == Material.WRITTEN_BOOK || itemStack.getType() == Material.WRITABLE_BOOK);
     }
 
-    // Helper method to convert a BookMeta to a Book object
     private Book parseItemToBook(BookMeta bookMeta) {
         Book book = new Book();
         book.setId(bookMeta.getPersistentDataContainer().get(bookIdKey, PersistentDataType.INTEGER));
         book.setTitle(bookMeta.getTitle());
 
-        // Extract the description and image URL from the first page
         if (bookMeta.hasPages()) {
             String firstPage = bookMeta.getPage(1);
             String[] parts = firstPage.split("\n\n---\n\n");
@@ -228,13 +244,13 @@ public class BookService {
             book.setImageUrl(parts.length > 1 ? parts[1].replace("Image URL: ", "") : "");
         }
 
-        // Extract chapters from the remaining pages
         List<Chapter> chapters = new ArrayList<>();
         for (int i = 1; i < bookMeta.getPages().size(); i++) {
             Chapter chapter = new Chapter();
             chapter.setContent(bookMeta.getPage(i + 1));
             chapters.add(chapter);
         }
+
         book.setChapters(chapters);
         return book;
     }
